; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra/extr_compat.c_get_fs_path.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra/extr_compat.c_get_fs_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8**, i32*, i8*, i32*)* @get_fs_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_fs_path(i8** %0, i32* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i8** %0, i8*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @svn_ra_get_session_url(i32* %11, i8** %9, i32* %12)
  %14 = call i32 @SVN_ERR(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @svn_ra_get_path_relative_to_root(i32* %15, i8** %10, i8* %16, i32* %17)
  %19 = call i32 @SVN_ERR(i32 %18)
  %20 = load i8*, i8** %10, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @svn_relpath_join(i8* %20, i8* %21, i32* %22)
  %24 = load i32*, i32** %8, align 8
  %25 = call i8* @svn_fspath__canonicalize(i32 %23, i32* %24)
  %26 = load i8**, i8*** %5, align 8
  store i8* %25, i8** %26, align 8
  %27 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %27
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_ra_get_session_url(i32*, i8**, i32*) #1

declare dso_local i32 @svn_ra_get_path_relative_to_root(i32*, i8**, i8*, i32*) #1

declare dso_local i8* @svn_fspath__canonicalize(i32, i32*) #1

declare dso_local i32 @svn_relpath_join(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
